--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -237,7 +237,7 @@
                         {
                             <div style="position: absolute; bottom: 0; right: 0;">
                                 <MButton Height="40" Outlined Width="100" Class="rounded-pill mr-6" Color="primary" OnClick="ClonePrevClick">@T("Back")</MButton>
-                                <MButton Height="40" Width="100" Class="rounded-pill" Color="primary" OnClick="CloneAsync">@T("Clone")</MButton>
+                                <SButton Small OnClick="CloneAsync">@T("Clone")</SButton>
                             </div>
                         }
                     </div>
