--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
@@ -94,7 +94,7 @@
             }
         </div>
         <div class="d-flex justify-end align-end" style="width:100%;">
-            <SButton Small Color="primary" Width="100" OnClick="HandleOnSubmitAsync">@T("Submit")</SButton>
+            <SButton Small Color="primary" OnClick="HandleOnSubmitAsync">@T("Submit")</SButton>
         </div>
     </div>
 </SSheetDialog>
