--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Overview.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Overview.razor
@@ -1,6 +1,8 @@
 ﻿@page "/Overview"
 @inherits MasaCompontentBase
 
+<PageTitle>@T("Overview")</PageTitle>
+
 <CascadingValue Value="this">
     <MTabs ValueChanged="TabValueChangedAsync" Value="_curTab" SliderColor="transparent" class="pro-nav remover-ripple">
         <MTab class="text-capitalize pa-0">
