--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Public.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Public.razor
@@ -1,4 +1,7 @@
 ﻿@page "/Public"
+@inherits MasaCompontentBase
+
+<PageTitle>@T("PublicConfig")</PageTitle>
 
 <Config ConfigObjectType="@_configModel.ConfigObjectType"
         EnvironmentClusterId="@_configModel.EnvironmentClusterId"
