--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -2,6 +2,8 @@
 @inherits MasaCompontentBase;
 @inject MasaBlazor MasaBlazor
 
+<PageTitle>@T("team")</PageTitle>
+
 <CascadingValue Value="this">
     <MTabs ValueChanged="TabValueChangedAsync" Value="_curTab" SliderColor="transparent" class="pro-nav remover-ripple">
         <MTab class="text-capitalize pa-0">
