--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -13,3 +13,5 @@
 @using Humanizer
 @using Masa.Contrib.Service.Caller.Authentication.OpenIdConnect;
 @using System.Reflection;
+@using Masa.BuildingBlocks.StackSdks.Config;
+@using Masa.Contrib.StackSdks.Config;
