--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -641,7 +641,7 @@
                       OnSubmitAfter="()=>GetConfigObjectsAsync(_selectCluster.Id, ConfigObjectType)">
 </AddConfigObjectModal>
 
-<SSheetDialog @key="@($"propertyConfigModal-{_propertyConfigModal.Visible}")" Value="_propertyConfigModal.Visible" ValueChanged="PropertyConfigModalValueChanged" Title="@(_propertyConfigModal.HasValue ? T("Modify config object item") : T("Create config object item"))" Icon="mdi-circle" IconColor="success">
+<SSheetDialog EnableDomReload Value="_propertyConfigModal.Visible" ValueChanged="PropertyConfigModalValueChanged" Title="@(_propertyConfigModal.HasValue ? T("Modify config object item") : T("Create config object item"))" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_propertyConfigModal.Data">
         <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
             <div>
@@ -676,7 +676,7 @@
                OnClick="RollbackAsync"
                OnClickAfter="_handleRollbackOnClickAfter" />
 
-<SSheetDialog @key="@($"releaseHistoryModal-{_showReleaseHistory}")" @bind-Value="_showReleaseHistory" Title="@T("Release history")" Icon="mdi-circle" IconColor="success">
+<SSheetDialog EnableDomReload @bind-Value="_showReleaseHistory" Title="@T("Release history")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
         <div>
             <div class="emphasis--text h6 d-flex align-center">
