--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 @inject IMasaStackConfig MasaStackConfig
 
 <SLayout OnErrorAsync="OnError"
-         AppId="@MasaStackConfig.GetUiId("dcc")"
+         AppId="@MasaStackConfig.GetWebId(MasaStackConstant.DCC)"
          TeamRouteFormat="team"
          Logo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo-h-en.png"
          MiniLogo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo.png">
