refactor:  release history modal  in config 1. add .idea,.DS_Store to gitignore 2. move release history modal to component  in config 3. move config header to component

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -1,7 +1,7 @@
 ﻿@inherits MasaCompontentBase
 
-<SSheetDialog EnableDomReload Value="Value" ValueChanged="CloneDialogValueChangedAsync" Title="@T("Clone config object")" Icon="mdi-circle" IconColor="success">
-    <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px;">
+<SSheetDialog EnableDomReload Value="Value" Title="@T("Clone config object")" Icon="mdi-circle" IconColor="success">
+<div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px;">
         <MStepper Value="_step" Elevation=0 Class="full-height">
             <MStepperHeader Style="box-shadow:none !important">
                 <MStepperStep Step="1" Complete="_step>1">
