refactor:  move history modal and  header to component in config 1. add .idea,.DS_Store to gitignore 2. move release history modal to component  in config 3. move config header to component

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
@@ -1,6 +1,6 @@
 ﻿@inherits MasaComponentBase
 
-<SModal Width="684" Title="@T("Rollback")" Value="Value" ValueChanged="ValueChanged" HideCancelAction OnSave="HandOnClickAsync">
+<SModal @key="@ModalKey" Width="684" Title="@T("Rollback")" Value="Value" ValueChanged="ValueChanged" HideCancelAction OnSave="HandOnClickAsync">
     <ChildContent>
         <MAlert Dense
                 Type="AlertTypes.Warning">
