feat: update package

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
@@ -16,6 +16,6 @@
 
     async Task OnError(Exception exception)
     {
-        await PopupService.AlertAsync(exception.Message, AlertTypes.Error);
+        await PopupService.EnqueueSnackbarAsync(exception.Message, AlertTypes.Error);
     }
 }
